--- a/Ajedrez/aperturas.html
+++ b/Ajedrez/aperturas.html
@@ -514,18 +514,25 @@
         </details></li>
         <!-- ****************************** -->
         <li><details class="select">
-          <summary></summary>
+          <summary>Defensa Chigorin</summary>
          <div class="master">
           <div class="uno">
-            <h4></h4>
+            <h4>Apertura Italiana</h4>
             <ol>
-               <li ><span class="blancas">  </span><span class="negras"> </span></li>
-              <li ><span class="blancas"> </span><span class="negras"> </span></li>
-              <li ><span class="blancas"> </span><span class="negras"> </span></li>
-              <li ><span class="blancas"> </span><span class="negras"> </span></li>
-              <li ><span class="blancas"></span><span class="negras"> </span></li>
-              <li ><span class="blancas"> </span><span class="negras"></span></li>
-              <li ><span class="blancas"> </span><span class="negras"> </span></li>
+               <li ><span class="blancas">Pe4  </span><span class="negras">Pe5 </span></li>
+              <li ><span class="blancas">Cf3 </span><span class="negras">Cc6 </span></li>
+              <li ><span class="blancas">Ac4 </span><span class="negras">Cf6 </span></li>
+              <li ><span class="blancas">Pd3 </span><span class="negras">Ac5 </span></li>
+              <li ><span class="blancas">0-0</span><span class="negras">Pd6 </span></li>
+              <li ><span class="blancas">Ag5 </span><span class="negras">Ph3</span></li>
+              <li ><span class="blancas">Ah4 </span><span class="negras">Pg5!! </span></li>
+              <li ><span class="blancas">CxP </span><span class="negras">Ph4 </span></li>
+              <li ><span class="blancas">CxP </span><span class="negras">PxA!! </span></li>
+              <li ><span class="blancas">CxD </span><span class="negras">Ag6 </span></li>
+              <li ><span class="blancas">Dd2 </span><span class="negras">Cd4 </span></li>
+              <li ><span class="blancas"> PhxP</span><span class="negras">Cf6+ </span></li>
+              <li ><span class="blancas">PxC </span><span class="negras">AxP </span></li>
+              <li ><span class="blancas">Te1 </span><span class="negras">Th1++ </span></li>
               <li ><span class="blancas"> </span><span class="negras"> </span></li>
             </ol>
           </div>
@@ -539,6 +546,13 @@
               <li ><span class="blancas"> </span><span class="negras"> </span></li>
               <li ><span class="blancas"></span><span class="negras"> </span></li>
               <li ><span class="blancas"> </span><span class="negras"></span></li>
+              <li ><span class="blancas"> </span><span class="negras"> </span></li>
+              <li ><span class="blancas"> </span><span class="negras"> </span></li>
+              <li ><span class="blancas"> </span><span class="negras"> </span></li>
+              <li ><span class="blancas"> </span><span class="negras"> </span></li>
+              <li ><span class="blancas"> </span><span class="negras"> </span></li>
+              <li ><span class="blancas">PfxP</span><span class="negras">Cf6+ Doble </span></li>
+              <li ><span class="blancas">Rh1 </span><span class="negras">TxP++</span></li>
               <li ><span class="blancas"> </span><span class="negras"> </span></li>
               <li ><span class="blancas"> </span><span class="negras"> </span></li>
             </ol>
@@ -555,6 +569,13 @@
               <li ><span class="blancas"> </span><span class="negras"> </span></li>
               <li ><span class="blancas"> </span><span class="negras"> </span></li>
               <li ><span class="blancas"> </span><span class="negras"> </span></li>
+              <li ><span class="blancas"> </span><span class="negras"> </span></li>
+              <li ><span class="blancas"> </span><span class="negras"> </span></li>
+              <li ><span class="blancas"></span><span class="negras"> </span></li>
+              <li ><span class="blancas">Cc3 </span><span class="negras">Cf6+ </span></li>
+              <li ><span class="blancas">PxC </span><span class="negras">AxP </span></li>
+              <li ><span class="blancas">Te1 </span><span class="negras">PxP </span></li>
+              <li ><span class="blancas">Rf1 </span><span class="negras">Ph1(Dama)++ </span></li>
             </ol>
           </div>
           <!-- ******************************** -->
