--- a/lectio/index.html
+++ b/lectio/index.html
@@ -42,12 +42,12 @@
         <li class="li"><a href="#libros">ENLACE A LIBROS</a></li>
         <li class="li"><a href="#intro">INTRODUCCIÓN</a></li>
         <li class="li"><a href="#LECTIO">INTRODUCCIÓN A LA LECTIO</a></li>
-        <li class="li"><a href="#1">PROCESO LECTIO</a></li>
-        <li class="li"><a href="#2">PROCESO MEDITATIO</a></li>
-        <li class="li"><a href="#3">PROCESO ORATIO</a></li>
-        <li class="li"><a href="#4">PROCESO CONTEMPLATIO</a></li>
-        <li class="li"><a href="#5">METANOIA </a></li>
-        <li class="li"><a href="#6"> </a></li>
+        <li class="li"><a href="#1"></a></li>
+        <!-- <li class="li"><a href="#2"></a></li>
+        <li class="li"><a href="#3"></a></li>
+        <li class="li"><a href="#4"></a></li>
+        <li class="li"><a href="#5"></a></li>
+        <li class="li"><a href="#6"> </a></li> -->
       </ol>
       </div>
       </section>
@@ -672,86 +672,19 @@
   </section>
   <!-- ********************************************************** -->
 <section id="1">
-  <h2 class="titulo">LECTIO ¿Qué dijo el Señor?</h2>
-  <ol> 
-    <h2 class="subtitulo">ELEGIR EL TEXTO</h2>
-  <p>Leer al menos estas versiones y elegir una básica, teniendo en cuenta las variantes</p>
-    <OL class="cita">
-      <LI >JERUSALÉN</LI>
-      <LI>LATINOAMERICANA</LI>
-      <LI>VERSIÓN GRIEGA (LXX- TISCHENDORF)</LI>
-      <LI>VERSIÓN LATINA (VULGATA)</LI>
-      <LI>VERSIÓN JUDÍA (KADOSH)</LI>
-      <LI>NVI</LI>
-      <LI>RV60</LI>
-      <li>otras</li>
-    </OL>
-    <h2 class="subtitulo">LA LECTURA DEL TEXTO</h2>
-    <ol>
-      <li>Tener presente la intencionalidad del Autor</li>
-      <li>Es Evangelio, Buena Noticia: Como relacionarlo con el contexto vital de los destinatarios</li>
-      <li> </li>
-    </ol>
-    <h2 class="subtitulo">EL AUTOR</h2>
-      <ol class="cita">
-        <li>OCUPACIÓN</li>
-        <li>LLAMAMIENTO-CONVERSIÓN</li>
-        <li>MISIÒN</li>
-        <li>VIDA</li>
-      </ol>
-    <h2 class="subtitulo">EL TEXTO </h2>
-      <ol>
-        <li class="cita">PROPÓSITO DEL AUTOR</li>
-        <li class="cita">ORIGEN DEL TEXTO</li>
-        <li class="cita">FECHA DE COMPOSICIÓN</li>
-        <li class="cita">IDEAS CENTRALES DEL TEXTO</li>
-      </ol>
-    <h2 class="subtitulo">CONTEXTO DE LOS DESTINATARIOS</h2>
-      <ol>
-        <li class="cita">FACTORES INTERNOS</li>
-        <li class="cita">FACTORES EXTERNOS </li>
-        <li class="cita">QUÉ EXPECTATIVAS TENIAN</li>
-      </ol>
-    <h2 class="subtitulo">GÉNERO LITERARIO</h2>
-    <h2 class="subtitulo">COMENTARIOS PATRÍSTICOS</h2>
-    <h2 class="subtitulo">COMENTARIOS MODERNOS</h2>
-    <h2 class="subtitulo">EL MENSAJE PARA LOS DESTINATARIOS</h2>
-  </ol>
+  
 </section>
 <!-- ****************************************************************** -->
 <section id="2">
-  <h2 class="subtitulo">MEDITATIO ¿Qué me dice el Señor?</h2>
-  <ol>
-    <li class="cita">RELACIÓN MENSAJE-CRISTIFICACIÓN</li>
-    <li class="cita">RELACIÓN DE LOS DESTINATARIOS Y NOSOTROS</li>
-    <li class="cita">QUE ME DICE A MI/NOSOTROS</li>
-    <li class="cita">ARMONIA CON LO ANTERIORMENTE ORADO</li>
-  </ol>
+
 </section>
 <!-- ****************************************************************** -->
 <section id="3">
-  <h2 class="subtitulo">ORATIO ¿Qué respondo al Señor?</h2>
-  <ol> 
-    <li class="cita">COMO SE RESPONDE HOY, CON FE O SIN ELLA</li>
-    <li class="cita">RESPUESTAS A TRAVÉS DEL TIEMPO: LOS SANTOS</li>
-    <li class="cita">RESPUESTAS DE MI ENTORNO</li>
-    <li class="cita">MI RESPUESTA</li>
-    <li class="cita">COMO HACERLA REALIDAD Y VIDA</li>
-  </ol>
+ 
 </section>
 <!-- ****************************************************************** -->
 <section id="4">
-  <h2 class="subtitulo">CONTEMPLATIO ¿Qué me muestra el Señor?</h2>
-  <ol>
-    <li class="cita">COMO ACTUA EL SEÑOR EN CADA CIRCUNSTANCIA</li>
-    <li class="cita">MODELO DE CONVERSIÓN</li>
-    <li class="cita">COMO ME AYUDA A COMPRENDER MEJOR LOS TEXTOS </li>
-    <li class="cita">COMO ME AYUDA A CONOCER MEJOR AL SEÑOR</li>
-    <li class="cita">COMO APLICARLO A TODAS MIS REALIDADES</li>
-    <li class="cita">COMO COMPARTIRLO</li>
-    <li class="cita">CONDENSARLO EN UNA ORACIÓN: GRACIAS, PETICIÓN Y CONVERSIÓN</li>
-    <li class="cita">HACER UN GRAN MOMENTO DE SILENCIO, PAZ Y DISPONIBILIDAD</li>
-  </ol>
+ 
 </section>
 <!-- ****************************************************************** -->
 <section id="5">
