--- a/musica/solfeo.html
+++ b/musica/solfeo.html
@@ -29,7 +29,12 @@
   <h1> TEMAS</h1>
   <div>
     <ol>
-     <li class="li"><a href="#1">Método Rodolphe</a></li>
+     <li class="li"><a href="#1">Método Rodolphe</a>
+    <ul>
+      <li><a href="https://www.youtube.com/watch?v=eqkIA9DDWH8&list=PLTv__5l5504S4kH2fiJrtv074gz_Ngq3Q&index=1">LINK</a></li>
+    </ul>
+    </li>
+     
      <li class="li"><a href="#2"></a></li>
      <li class="li"><a href="#3"></a></li>
      <li class="li"><a href="#4"></a></li>
@@ -47,23 +52,23 @@
    <!-- /////////////////////////////////////// -->
    <ol>
     <li><details class="select">
-      <summary>Clase 1-2</summary>
+      <summary>Clase 1</summary>
      <a href="../media/musica/solfeo/01 SOLFEO - CLASES1-2.pdf">Ejercicios </a>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Clase 3-4</summary>
+      <summary>Clase 2-3</summary>
       <a href="../media/musica/solfeo/CLASE 3.pdf">Ejercicios </a>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Clase 5-6</summary>
+      <summary>Clase 4-5</summary>
       <a href="../media/musica/solfeo/SOLFEO 05.pdf">Ejercicios </a>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary></summary>
+      <summary>Clase 6-11</summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
@@ -72,6 +77,7 @@
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
+  
     <li><details class="select">
       <summary></summary>
       <p><br><br></p>
