--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <p class="logo"> CRISTO SALVADOR</p>
         <!-- ****************************************************** -->
         <a href="#alInicio"><img src="./media/ESCUDOCARM.png" alt="" class="logoC"></a>
-        <a href="euangelium/01formacion.html" class="nombre">APOLOGÍA </a>
-        <a href="noviciado/01formacion.html" class="nombre">FORMACIÓN </a>
+        <a href="./indiceGeneral.html" class="nombre">FORMACIÓN </a>
       </div>
     </header> <br><br><br><br>
     <!-- ******************************************************** -->
