--- a/indiceGeneral.html
+++ b/indiceGeneral.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../styles/style.css">
-  <title>FORMACIÓN</title>
+  <title>INDICE</title>
   <style>
       
    
@@ -26,23 +26,23 @@
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
-    <h1 class="init">TEMAS</h1>
+    <h1 class="init">ÍNDICE GENERAL</h1>
   
     <h3 class="cita">"No aceptes como Verdad lo que no proviene del Amor,<br> ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</h3>
 
     <section id="Formación">
       <hr>
-      <h1> TEMAS</h1>
+      <h1> ÍNDICE GENERAL</h1>
       <div>
         <ol>
           <h3 class="cita">Oración</h3>
-          <li class="li"><a href="../lectio/intro.html">LECTIO DIVINA</a></li>
+          <li class="li"><a href="../lectio/index.html">LECTIO DIVINA</a></li>
           <li class="li"><a href="../oracion/oracion.html">ORACIÓN</a></li>
           <li class="li"><a href="../discretio/index.html">DISCRETIO</a></li>
 <h3 class="cita">Formación</h3>
           <li class="li"><a href="../liturgia/liturgia.html">LITURGIA</a></li>
-          <li class="li"><a href="../noviciado/historiaCarmelita.html">ORDEN CARMELITA SEGLAR</a></li>
+          <li class="li"><a href="./ordenCarmelita/historiaCarmelita.html">ORDEN CARMELITA SEGLAR</a></li>
           <li class="li"><a href="../historia/index.html">HISTORIA DE LA IGLESIA</a></li>
           <li class="li"><a href="../doctrinaSocial/index.html">DOCTRINA SOCIAL</a></li>
           <li class="li"><a href="../Magisterio/index.html">MAGISTERIO</a></li>
@@ -215,7 +215,7 @@
         <li><span class="hora">Solfeo</span>
           <ul>
             <li><input type="checkbox" data-id="idioma">
-              <span>Clases 6-10 </span>
+              <span>Clases 6-11 </span>
             </li>
           </ul>
           </li>
