--- a/discretio/index.html
+++ b/discretio/index.html
@@ -31,12 +31,12 @@
     <ol>
      <li class="li"><a href="#0">Praefatio</a></li>
      <li class="li"><a href="#1">DIA 1</a></li>
-     <li class="li"><a href="#2"></a></li>
-     <li class="li"><a href="#3"></a></li>
-     <li class="li"><a href="#4"></a></li>
-     <li class="li"><a href="#5"></a></li>
-     <li class="li"><a href="#6"></a></li>
-     <li class="li"><a href="#7"></a></li>
+     <li class="li"><a href="#2">DÍA 2</a></li>
+     <li class="li"><a href="#3">DÍA 3</a></li>
+     <li class="li"><a href="#4">DÍA 4</a></li>
+     <li class="li"><a href="#5">DÍA 5</a></li>
+     <li class="li"><a href="#6">DÍA 6</a></li>
+     <li class="li"><a href="#7">DÍA 7</a></li>
 
     </ol>
 
@@ -130,7 +130,7 @@
   </details></li>
   <!-- ****************************** -->
   <li><details class="select">
-    <summary>METANOIA</summary>
+    <summary>Metanoia</summary>
    <ol>
     <li>Un Lugar [El desierto, la soledad]</li>
     <li>Una hora [El tiempo y yo somos de Dios] </li>
@@ -229,6 +229,15 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
+      <summary>Metanoia</summary>
+      <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
+    </details></li>
+    <!-- ****************************** -->
+    <li><details class="select">
       <summary></summary>
       <ol>
         <li></li>
@@ -244,11 +253,32 @@
 </section>
 <!-- ****************************************************************** -->
 <section id="3">
-  <h2 class="subtitulo"></h2>
+  <h2 class="subtitulo">La Oración</h2>
     <!-- /////////////////////////////////////// -->
     <ol>
       <li><details class="select">
-        <summary></summary>
+        <summary>Centro de la Vida</summary>
+        <ol>
+        <li>Entender como oración cualquier tipo encuentro con el Señor</li>
+        <li>Iniciar en determinados momentos posibles e ir creciendo en momentos de oración</li>
+        <li>Deberá en su momento ser nuestro día a día</li>
+      </ol>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
+        <summary>Objetivos</summary>
+        <ol>
+        <li>Vivir en la presencia del Señor para que nos transforme</li>
+        <li>Quitando las afecciones desordenadas</li>
+        <li>Adquiriendo virtudes</li>
+        <li>Conocer al Señor y su Voluntad</li>
+        <li>Disfrutar al hacer su Voluntad</li>
+        <li></li>
+      </ol>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
+        <summary>Metanoia</summary>
         <ol>
         <li></li>
         <li></li>
@@ -265,60 +295,7 @@
       </ol>
       </details></li>
       <!-- ****************************** -->
-      <li><details class="select">
-        <summary></summary>
-        <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      </details></li>
-      <!-- ****************************** -->
-      <li><details class="select">
-        <summary></summary>
-        <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      </details></li>
-      <!-- ****************************** -->
-      <li><details class="select">
-        <summary></summary>
-        <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      </details></li>
-      <!-- ****************************** -->
-      <li><details class="select">
-        <summary></summary>
-        <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      </details></li>
-      <!-- ****************************** -->
-      <li><details class="select">
-        <summary></summary>
-        <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      </details></li>
-      <!-- ****************************** -->
-      <li><details class="select">
-        <summary></summary>
-        <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ol>
-      </details></li>
-      <!-- ****************************** -->
+
     </ol>
     <!-- ////////////////////////////////// -->
 
@@ -383,7 +360,7 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary></summary>
+      <summary>Metanoia</summary>
       <ol>
         <li></li>
         <li></li>
@@ -464,7 +441,7 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary></summary>
+      <summary>Metanoia</summary>
       <ol>
         <li></li>
         <li></li>
@@ -546,7 +523,7 @@
       </details></li>
       <!-- ****************************** -->
       <li><details class="select">
-        <summary></summary>
+        <summary>Metanoia</summary>
         <ol>
         <li></li>
         <li></li>
@@ -627,7 +604,7 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary></summary>
+      <summary>Metanoia</summary>
       <ol>
         <li></li>
         <li></li>
