--- a/musica/solfeo.html
+++ b/musica/solfeo.html
@@ -69,6 +69,7 @@
     <!-- ****************************** -->
     <li><details class="select">
       <summary>Clase 6-11</summary>
+      <a href="../media/musica/solfeo/SOLFEO 6-11.pdf">Ejercicios</a>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
