--- a/oracion/CastilloInterior.html
+++ b/oracion/CastilloInterior.html
@@ -19,7 +19,7 @@
       </div>
     </header> <br><br>
     <!-- *************************************************************************** -->
-    <h1 class="init">OBJETIVO</h1>
+    <h1 class="init">El Castillo Interior</h1>
        <h3><b><i>"No aceptes como Verdad lo que no proviene del Amor, ni aceptes como Amor lo que no proviene de la Verdad"
           <br>EDITH STEIN</i></b></h3>
 
@@ -129,6 +129,23 @@
         <!-- ****************************** -->
         <li><details class="select">
           <summary>Metanoia</summary>
+        <ul>
+            <li>Cada morada muestra el proceso de conversión, como debo de debe ser para ingresar a la siguiente morada</li>
+            <li>Es una secuencia que la Gracia dirige.</li>
+            <li>Mt 22,1-14</li>
+            <li>Ingresamos al Castillo por la Gracia del Bautismo</li>
+            <li>A la 1ra Morada por la Oración constante </li>
+            <li>A la 2da Morada porque unimos a la oración el deseo del Bien en todo y para todos  <br> <br>
+            En nosotros el deseo de no pecar y realizar en todo la Voluntad de Dios <br>En las personas, que la Voluntad de Dios se haga en su vida con la libertad que Dios quiere</li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </details></li> 
+        <!-- ****************************** -->
+        <li><details class="select">
+          <summary></summary>
         <ol>
             <li></li>
             <li></li>
@@ -328,10 +345,12 @@
         <li><details class="select">
            <summary>Inceptum Divinum</summary>
           <p>El Bien que inspira el Señor</p>
+          <h3>Capitulo 1</h3>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>En cada etapa se muestra una característica (cambio) que debe adquirir la persona</li>
+            <li>Es lo necesario para seguir avanzando</li>
+            <li>Agradecer cada paso y prepararse para el siguiente</li>
+            <li>Siempre reconocer a Dios Actuando y Guiando</li>
             <li></li>
           </ol>
         </details></li>
@@ -339,8 +358,9 @@
         <li><details class="select">
              <summary>Discernimentum</summary>
           <p>reconocer el Bien, desearlo y implementarlo</p>
+          <h3>Capitulo 1</h3>
         <ol>
-            <li></li>
+            <li>Lo que me acerca a Dios de manera permanente y creciente, es bueno.</li>
             <li></li>
             <li></li>
             <li></li>
@@ -350,10 +370,13 @@
         <li><details class="select">
            <summary>Oratio: Responsum et Directio</summary>
           <p>Video cor meum et Metanoia</p>
+          <h3>Capitulo 1</h3>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>Ser consiente del pecado y tratar de Evitarlo</li>
+            <li>Hacer aquellas penitencias que me ayuden a evitar el pecado y a crecer en el Amor</li>
+            <li>Perseverante en la Oración, sin importar las distracciones y sequedad</li>
+            <li>Buscar hacer el bien</li>
+            <li>cambiar la impaciencia por el conocimiento y la confianza en el Señor, esto es humildad </li>
             <li></li>
           </ol>
         </details></li>
@@ -361,18 +384,20 @@
         <li><details class="select">
           <summary>Scientia Domini</summary>
           <p>Conocer al Señor</p>
+          <h3>Capitulo 1</h3>
         <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>En la cruz nos conocemos y lo conocemos al Señor</li>
+            <li>La inquietud no viene del Señor</li>
+            <li>Humildad es andar en Verdad</li>
+            <li>Todo lo que sucede siempre es para nuestro Bien</li>
+            <li>Dios ve nuestras obras desde nuestra voluntad y nuestro corazón</li>
           </ol>
         </details></li>
         <!-- ****************************** -->
         <li><details class="select">
           <summary>Metanoia</summary>
         <ol>
-            <li></li>
+            <li>Crecimiento continuo en todo</li>
             <li></li>
             <li></li>
             <li></li>
