--- a/liturgia/liturgia.html
+++ b/liturgia/liturgia.html
@@ -27,6 +27,7 @@
     <h1> FORMACIÓN</h1>
     <div>
       <ol>
+        <li class="li"><a href="#ritos ">Ritos Litúrgicos</a></li>
         <li class="li"><a href="../liturgia/misa.html">MISA- MISAL ROMANO</a></li>
         <li class="li"><a href="../latin/index.html">LATIN</a></li>
         <li class="li"><a href=" "></a></li>
@@ -39,5 +40,57 @@
     
     </div>
   </section>
+<section id="ritos">
+  <h3 class="cita">RITOS LITURGICOS</h3>
+      <p>Además del rito latino (que es el más común en la Iglesia Católica, incluyendo el Rito Romano), la Iglesia Católica reconoce varios ritos eucarísticos o liturgias dentro de las Iglesias orientales en comunión con Roma. Estos ritos pertenecen a diferentes tradiciones litúrgicas y son usados por las Iglesias católicas orientales. En total, la Iglesia Católica tiene alrededor de 23 Iglesias sui iuris (autónomas) que siguen diferentes ritos litúrgicos. <br><br>
+
+        Resumen de los principales ritos eucarísticos reconocidos por la Iglesia Católica además del rito latino:<br><br>
+
+         1. Rito Alejandrino<br>
+           - Liturgia de San Marcos.<br>
+           - Usado por la Iglesia Católica Copta y la Iglesia Católica Etíope-Eritrea.<br>
+           - Derivado de las antiguas tradiciones litúrgicas de Alejandría.<br><br>
+
+         2. Rito Antioqueno<br>
+           - Liturgia de San Santiago (Santiago el Menor).<br>
+           - Usado por la Iglesia Católica Siro-Malankar y la Iglesia Católica Siria.<br>
+           - Se originó en la Iglesia de Antioquía y tiene una gran influencia en las liturgias orientales.<br><br>
+
+         3. Rito Armenio<br>
+           - Liturgia de San Gregorio el Iluminador.<br>
+           - Usado por la Iglesia Católica Armenia.<br>
+           - Derivado de las antiguas tradiciones litúrgicas armenias.<br><br>
+
+         4. Rito Bizantino (Constantinopolitano)<br>
+           - Liturgia de San Juan Crisóstomo (la más utilizada).<br>
+           - Liturgia de San Basilio (usada en ocasiones especiales).<br>
+           - Usado por varias Iglesias católicas orientales como la Iglesia Greco-Católica Melquita, la Iglesia Católica Ucraniana, la Iglesia Católica Rumana, entre otras.<br>
+           - Es uno de los ritos más extendidos dentro de las Iglesias orientales en comunión con Roma.<br><br>
+
+         5. Rito Caldeo<br>
+           - Liturgia de los Santos Addai y Mari.<br>
+           - Usado por la Iglesia Católica Caldea y la Iglesia Católica Siro-Malabar.<br>
+           - Derivado de las antiguas tradiciones litúrgicas de la Iglesia en Mesopotamia.<br><br>
+
+         6. Rito Maronita<br>
+           - Liturgia Maronita.<br>
+           - Usado exclusivamente por la Iglesia Maronita.<br>
+           - Tiene influencia antioquena pero ha desarrollado su propia tradición única a lo largo de los siglos.<br><br>
+
+         7. Rito Siríaco Occidental<br>
+           - Liturgia de San Sixto.<br>
+           - Usado por la Iglesia Católica Siria y en ocasiones también por la Iglesia Católica Siro-Malankar.<br><br>
+
+         8. Rito Latino (Rito Romano):<br>
+      Es bueno destacar que incluso dentro de este, existen algunas variantes:<br>
+        - Forma Ordinaria (usada desde el Concilio Vaticano II).<br>
+        - Forma Extraordinaria (el Misal de 1962, conocido como la Misa Tridentina).<br>
+        - Otros sub-ritos latinos como el Rito Ambrosiano (en Milán), el Rito Mozárabe (en Toledo, España), y otros más específicos como el Rito Cartujo y el Rito Dominicano.<br>
+
+         En resumen:<br>
+        La Iglesia Católica tiene una rica diversidad de ritos eucarísticos, lo que refleja su carácter universal.
+        </p>
+</section>
+
 </body>
 </html>
