--- a/lectio/mateo/mateo2.html
+++ b/lectio/mateo/mateo2.html
@@ -118,7 +118,7 @@
     <!--<br>**************************<br>-->
     <li><details class="select">
       <summary>Paralelos</summary>
-       <p>Mateo 2,1-12 tiene varios textos y temas paralelos en la Biblia que nos ayudan a comprender mejor su significado. Aquí te dejo algunos de los más importantes:
+       <p>Mateo 2,1-12 tiene varios textos y temas paralelos en la Biblia que nos ayudan a comprender mejor su significado. 
         <br>
         <br> 1. Textos paralelos en la Biblia
        <br> Isaías 60,1-6 → La profecía de los Reyes de Oriente
@@ -187,7 +187,7 @@
     <!--<br>**************************<br>-->
     <li><details class="select">
       <summary>Patrística</summary>
-       <p>Sí, los Padres de la Iglesia comentaron ampliamente Mateo 2,1-12, viendo en este pasaje una rica enseñanza teológica. Aquí te comparto algunos de sus principales comentarios:
+       <p>Los Padres de la Iglesia comentaron ampliamente Mateo 2,1-12, viendo en este pasaje una rica enseñanza teológica. 
         <br>
         <br> 1. San Juan Crisóstomo (347-407 d.C.)
        <br> En su Homilía sobre el Evangelio de Mateo (Hom. 6,1), destaca que los Magos fueron guiados no por ángeles, sino por una estrella, para mostrar que Dios puede valerse de cualquier medio para revelar la verdad.
@@ -263,6 +263,20 @@
         </p>
     </details></li>
     <!--<br>**************************<br>-->
+    <li><details class="select">
+      <summary>Metanoia</summary>
+      <ol>
+        <li>Buscar permanentemente al Señor</li>
+        <li>El tipo de vida obstruye o ayuda la visión de la fe </li>
+        <li>Dios actúa en todas las personas</li>
+        <li>Dios se manifiesta a todo el que lo busca</li>
+        <li>Los católicos tenemos solo mayor disposición y apertura a la Gracia</li>
+        <li>El signo de la aceptación al Señor es la conversión</li>
+        <li>La misión de la iglesia es que la luz de Cristo brille para todas las personas desde nosotros y en nosotros </li>
+      </ol>
+      <p><br><br></p>
+    </details></li>
+    <!-- ****************************** -->
     <li><details class="select">
       <summary></summary>
         <ol>
