--- a/liturgia/misa.html
+++ b/liturgia/misa.html
@@ -722,6 +722,8 @@ Pésaj es una festividad tanto religiosa como comunitaria, que reafirma la liber
       <p>Se inicia cuando el sacerdote e dirige al altar</p>
       <ol>
         <li> Se hace una procesión al altar donde Los fieles presentan el pan y el vino, y a veces otras ofrendas.</li>
+        <li>1.	Ofertorio → Se presentan el pan y el vino para la bendición.</li>
+     
        
       </ol>
       <p><br><br></p>
@@ -914,11 +916,47 @@ Pésaj es una festividad tanto religiosa como comunitaria, que reafirma la liber
        <h3 class="cita">Traditio et Significatio </h3>
 
       <li><details class="select">
-        <summary>	Bendición sobre el pan y la tercera copa (la Copa de la Bendición)</summary>
+          <summary>Partes</summary>
+          <p>En la Pascua judía <br>
+            La cena pascual judía estaba estructurada en torno a cuatro copas de vino, cada una con un significado especial:<br>
+            1.	Copa de la Santificación – Inicio de la cena y bendición inicial.<br>
+            2.	Copa de la Proclamación – Se relataba la historia del Éxodo.<br>
+            3. Copa de la Bendición – Se bendecía el pan y se comía la cena.<br>
+            4.	Copa de la Consumación – Se cerraba el rito.
+            La tercera copa, llamada “Copa de la Bendición”, era la más importante, porque estaba unida a la comida principal de la Pascua, en la que se comía el cordero y el pan sin levadura.<br><br>
+            •	En este momento, el padre de familia tomaba el pan, lo bendecía, lo partía y lo distribuía entre los participantes.<br>
+            •	Luego, se bebía la tercera copa de vino con una bendición especial de acción de gracias.<br>
+            •	Este era el punto culminante de la cena pascual, porque en este momento se renovaba la alianza de Dios con su pueblo.<br>
+            <br><br></p>
+        </details></li>
+        <!-- ****************************** -->
+      <li><details class="select">
+        <summary>	Oración sobre las Ofrendas</summary>
         <ol>
           <li>En la Pascua judía, después de la comida, el líder de la cena pronunciaba una bendición sobre el pan y el vino, destacando la "Copa de Bendición".</li>
           <li>En la Misa, esto corresponde a la Liturgia Eucarística, donde el sacerdote pronuncia las palabras de la consagración sobre el pan y el vino.</li>
           <li></li>
+        </ol>
+        <p><br><br></p>
+      </details></li>
+      <!-- ****************************** -->
+      <li><details class="select">
+        <summary>Fracción del Pan</summary>
+        <ol>
+          <li>
+            En la Última Cena y la Misa <br>
+            Durante la Última Cena, Jesús siguió el mismo ritual pascual, pero hizo algo extraordinario: dio un nuevo significado al pan y al vino. <br>
+            1.	Bendición sobre el pan <br>
+           	Jesús tomó el pan, lo bendijo, lo partió y lo dio a sus discípulos diciendo: <br>
+            “Esto es mi cuerpo, que se entrega por ustedes. Hagan esto en memoria mía” (Lc 22,19). <br>
+           	Esto era algo completamente nuevo: Jesús se identifica con el pan. Ya no es solo un recuerdo de la salida de Egipto, sino que se convierte en su propio cuerpo entregado como sacrificio. <br>
+            2.	La tercera copa: la Copa de la Bendición <br>
+           	Después de comer el pan, Jesús tomó la copa de vino y dijo: <br>
+            “Esta copa es la nueva alianza en mi sangre, que es derramada por ustedes” (Lc 22,20). <br>
+           	Aquí, Jesús transforma la tercera copa de la Pascua judía en la Eucaristía. <br>
+           	Ya no es solo un símbolo de liberación de Egipto, sino el signo de la nueva alianza sellada con su sangre. <br>
+          </li>
+
         </ol>
         <p><br><br></p>
       </details></li>
