--- a/musica/partituras.html
+++ b/musica/partituras.html
@@ -35,7 +35,7 @@
      <li class="li"><a href="#2">El Pentagrama</a></li>
      <li class="li"><a href="#3">MuseScore</a></li>
      <li class="li"><a href="#4">Acordes</a></li>
-     <li class="li"><a href="#5"></a></li>
+     <li class="li"><a href="#5">Partituras Ecclesia</a></li>
      <li class="li"><a href="#6"></a></li>
      <li class="li"><a href="#7"></a></li>
 
@@ -405,6 +405,30 @@
           </ul>
           </li>
           <!-- ++++++++++++++++++++++++++++++ -->
+          <li><span class="do">Tresillo</span>
+            <ul>
+              <li># . Nota (Tiempo-punto-nota)</li>
+            </ul>
+            </li>
+            <!-- ++++++++++++++++++++++++++++++ -->
+          <li><span class="do">Ocultar Clave FA</span>
+            <ul>
+              <li>Partituras/ Diseño/ click en FA</li>
+            </ul>
+            </li>
+            <!-- ++++++++++++++++++++++++++++++ -->
+          <li><span class="do">Texto de Canción</span>
+            <ul>
+              <li>Presionar la nota donde empieza la silaba y Crl+L <br>para avanzar a la siguiente presionar espacio</li>
+            </ul>
+            </li>
+            <!-- ++++++++++++++++++++++++++++++ -->
+          <li><span class="do"></span>
+            <ul>
+              <li></li>
+            </ul>
+            </li>
+            <!-- ++++++++++++++++++++++++++++++ -->
           <li><span class="do"></span>
             <ul>
               <li></li>
@@ -474,12 +498,42 @@
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary>Acordes 7mos </summary>
+      <summary>Acordes 7mos Dominantes</summary>
+      <ol>
+        <li>	<span class="do">	  C7  	</span><br>  	C - E - G - Bb	</li>
+<li>	<span class="do">	  C#7 / Db7  	</span><br>  	C# - F - G# - B	</li>
+<li>	<span class="do">	  D7  	</span><br>  	D - F# - A - C	</li>
+<li>	<span class="do">	  D#7 / Eb7  	</span><br>  	D# - G - A# - C#	</li>
+<li>	<span class="do">	  E7  	</span><br>  	E - G# - B - D	</li>
+<li>	<span class="do">	  F7  	</span><br>  	F - A - C - Eb	</li>
+<li>	<span class="do">	  F#7 / Gb7  	</span><br>  	F# - A# - C# - E	</li>
+<li>	<span class="do">	  G7  	</span><br>  	G - B - D - F	</li>
+<li>	<span class="do">	  G#7 / Ab7  	</span><br>  	G# - C - D# - F#	</li>
+<li>	<span class="do">	  A7  	</span><br>  	A - C# - E - G	</li>
+<li>	<span class="do">	  A#7 / Bb7  	</span><br>  	A# - D - F - G#	</li>
+<li>	<span class="do">	  B7  	</span><br>  	B - D# - F# - A	</li>
+
+      </ol>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
     <li><details class="select">
-      <summary></summary>
+      <summary>Acordes Menores Séptimos (Xm7)</summary>
+      <ol>
+        <li>	<span class="do">	  Cm7 	</span><br>  	C - Eb - G - Bb	</li>
+<li>	<span class="do">	  C#m7 / Dbm7 	</span><br>  	C# - E - G# - B	</li>
+<li>	<span class="do">	  Dm7 	</span><br>  	D - F - A - C	</li>
+<li>	<span class="do">	  D#m7 / Ebm7 	</span><br>  	D# - F# - A# - C#	</li>
+<li>	<span class="do">	  Em7 	</span><br>  	E - G - B - D	</li>
+<li>	<span class="do">	  Fm7 	</span><br>  	F - Ab - C - Eb	</li>
+<li>	<span class="do">	  F#m7 / Gbm7 	</span><br>  	F# - A - C# - E	</li>
+<li>	<span class="do">	  Gm7 	</span><br>  	G - Bb - D - F	</li>
+<li>	<span class="do">	  G#m7 / Abm7 	</span><br>  	G# - B - D# - F#	</li>
+<li>	<span class="do">	  Am7 	</span><br>  	A - C - E - G	</li>
+<li>	<span class="do">	  A#m7 / Bbm7 	</span><br>  	A# - C# - F - G#	</li>
+<li>	<span class="do">	  Bm7 	</span><br>  	B - D - F# - A	</li>
+
+      </ol>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
@@ -508,7 +562,7 @@
    <!-- /////////////////////////////////////// -->
    <ol>
     <li><details class="select">
-      <summary></summary>
+      <summary>Partiturae Ecclesiae</summary>
       <p><br><br></p>
     </details></li>
     <!-- ****************************** -->
